--- a/public/styles/login.css
+++ b/public/styles/login.css
@@ -1,8 +1,20 @@
 #container {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+  height: 100vh;
 
   #login-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    h1 {
+      font-family: "Poppins", sans-serif;
+      font-size: 8rem;
+      font-weight: 700;
+    }
   }
 }
