--- a/public/styles/login.css
+++ b/public/styles/login.css
@@ -4,17 +4,22 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
+  width: 100%;
 
   #login-container {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    width: 100%;
 
-    h1 {
+    #login-title {
       font-family: "Poppins", sans-serif;
-      font-size: 8rem;
+      font-size: 5rem;
       font-weight: 700;
+    }
+    #firebase-ui-auth-container {
+      width: 800px;
     }
   }
 }
