--- a/public/styles/login.css
+++ b/public/styles/login.css
@@ -1,3 +1,7 @@
+body {
+  background-color: var(--green-primary);
+}
+
 #container {
   display: flex;
   flex-direction: column;
@@ -11,15 +15,17 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 100%;
+    width: 40%;
+    background-color: var(--white);
+    border-radius: 10px;
+    box-shadow: 0px 5px 9px 4px rgba(0, 0, 0, 0.24);
 
     #login-title {
       font-family: "Poppins", sans-serif;
-      font-size: 5rem;
+      font-size: 5vw;
       font-weight: 700;
     }
     #firebase-ui-auth-container {
-      width: 800px;
     }
   }
 }
