--- a/public/styles/login.css
+++ b/public/styles/login.css
@@ -2,6 +2,11 @@ body {
   background-color: var(--green-primary);
 }
 
+* {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
 #container {
   display: flex;
   flex-direction: column;
@@ -16,16 +21,210 @@ body {
     justify-content: center;
     align-items: center;
     width: 40%;
+    min-width: 600px;
+    padding: 50px;
     background-color: var(--white);
     border-radius: 10px;
     box-shadow: 0px 5px 9px 4px rgba(0, 0, 0, 0.24);
 
     #login-title {
       font-family: "Poppins", sans-serif;
-      font-size: 5vw;
-      font-weight: 700;
+      font-size: 3.2vw;
+      font-weight: 600;
     }
-    #firebase-ui-auth-container {
+    #align-demo {
+      width: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: start;
+      padding: 0 0 30px 9vw;
+
+      #demo-wrapper {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        line-height: 26px;
+        font-family: "Open Sans", sans-serif;
+        cursor: pointer;
+
+        --black: #4c4c4c;
+        --white: #eaeaea;
+        --gray: #808080;
+
+        --text-arrow-space: 14px;
+        --shaft-width: 1px;
+        --newshaft-width: 64px;
+        --shaft-thickness: 1px;
+        --arrow-head-width: 6px;
+        --arrow-head-thickness: var(--shaft-thickness);
+
+        .the-arrow {
+          width: var(--shaft-width);
+          transition: all 0.4s ease-in-out;
+
+          &.-left {
+            position: absolute;
+            top: 48%;
+            left: 0;
+
+            > .shaft {
+              width: 0;
+              background-color: var(--black);
+
+              &:before,
+              &:after {
+                width: 0;
+                background-color: var(--black);
+              }
+
+              &:before {
+                transform: rotate(0);
+              }
+
+              &:after {
+                transform: rotate(0);
+              }
+            }
+          }
+
+          &.-right {
+            top: 1px;
+
+            > .shaft {
+              width: var(--shaft-width);
+              transition-delay: 0.2s;
+
+              &:before,
+              &:after {
+                width: var(--arrow-head-width);
+                transition-delay: 0.3s;
+                transition: all 0.4s ease-in-out;
+              }
+
+              &:before {
+                transform: rotate(40deg);
+              }
+
+              &:after {
+                transform: rotate(-40deg);
+              }
+            }
+          }
+
+          > .shaft {
+            background-color: var(--black);
+            display: block;
+            height: var(--shaft-thickness);
+            position: relative;
+            transition: all 0.3s;
+            transition-delay: 0;
+            will-change: transform;
+
+            &:before,
+            &:after {
+              background-color: var(--black);
+              content: "";
+              display: block;
+              height: var(--arrow-head-thickness);
+              position: absolute;
+              top: 0;
+              right: 0;
+              transition: all 0.4s ease-in-out;
+              transition-delay: 0;
+            }
+
+            &:before {
+              transform-origin: top right;
+            }
+
+            &:after {
+              transform-origin: bottom right;
+            }
+          }
+        }
+
+        .animated-arrow {
+          display: inline-block;
+          color: var(--black);
+          font-size: 1rem;
+          font-style: italic;
+          text-decoration: none;
+          position: relative;
+          transition: all 0.4s ease-in-out;
+
+          &:hover {
+            color: var(--gray);
+
+            > .the-arrow.-left {
+              > .shaft {
+                width: var(--newshaft-width);
+                transition-delay: 0.1s;
+                background-color: var(--gray);
+
+                &:before,
+                &:after {
+                  width: var(--arrow-head-width);
+                  transition-delay: 0.1s;
+                  background-color: var(--gray);
+                }
+
+                &:before {
+                  transform: rotate(40deg);
+                }
+
+                &:after {
+                  transform: rotate(-40deg);
+                }
+              }
+            }
+
+            > .main {
+              transform: translateX(calc(var(--shaft-width) + var(--text-arrow-space)));
+              transform: translateX(calc(var(--newshaft-width) + var(--text-arrow-space)));
+
+              > .the-arrow.-right {
+                > .shaft {
+                  width: 0;
+                  transform: translateX(200%);
+                  transition-delay: 0;
+
+                  &:before,
+                  &:after {
+                    width: 0;
+                    transition-delay: 0;
+                    transition: all 0.4s ease-in-out;
+                  }
+
+                  &:before {
+                    transform: rotate(0);
+                  }
+
+                  &:after {
+                    transform: rotate(0);
+                  }
+                }
+              }
+            }
+          }
+
+          > .main {
+            display: flex;
+            align-items: center;
+            transition: all 0.4s ease-in-out;
+
+            > .text {
+              margin: 0 var(--text-arrow-space) 0 0;
+              line-height: 1;
+            }
+
+            > .the-arrow {
+              position: relative;
+            }
+          }
+        }
+      }
     }
   }
 }
