--- a/public/styles/theme.css
+++ b/public/styles/theme.css
@@ -4,6 +4,7 @@
   --black: #0d0a0b;
   --green-accent-primary: #004953;
   --green-accent-secondary: #1d7874;
+  --green-accent-secondary-transparent: #1d787494;
 }
 
 /* Poppins for headings */
