--- a/public/styles/theme.css
+++ b/public/styles/theme.css
@@ -2,9 +2,9 @@
   --green-primary: #177245;
   --white: #f1fffa;
   --black: #0d0a0b;
-  --green-accent-primary: #004953;
-  --green-accent-secondary: #1d7874;
-  --green-accent-secondary-transparent: #1d787494;
+  --green-accent-secondary: #2dab80;
+  --green-accent-primary: #70be39;
+  --green-accent-secondary-transparent: #2dab8149;
 }
 
 html, body {
