--- a/public/styles/daily_challenges.css
+++ b/public/styles/daily_challenges.css
@@ -1,6 +1,5 @@
 .card {
-    width: 200pt;
-    margin: auto;
+    margin: 0pt 20pt 20pt 20pt;
     margin-bottom: 20pt;
   }
 .card-body {
@@ -9,8 +8,25 @@
     padding: 0 15px;
   }
 
-  .card-header {
-    cursor: pointer;
+.card-header {
+cursor: pointer;
+display: grid;
+grid-template-rows: auto auto;
+grid-template-columns: auto;
+}
+.card-header .finish_button{
+  grid-row: 1 / span 2;
+  display: flex;
+  align-items: center;
+
+  
+}
+
+.card-header .title{
+  grid-row: 1;
+}
+.card-header .description{
+  grid-row: 2;
 }
 h1 {
   margin: 10pt 10pt 15pt 10pt;
@@ -22,14 +38,22 @@ h1 {
     overflow: hidden;
     transition: max-height 0.4s ease-in-out, padding 0.2s ease-in-out;
     padding: 0 15px;
+    display: grid;
+    grid-template-columns: 70% 30%;
 }
 
 .card-body img{
     width: 100%;
     height: auto;
 }
+
 .image-clip{
-  height: 200pt;
   overflow: hidden;
   border-radius: 8pt;
+  grid-column: 2;
+  grid-row: 1;
+}
+.card-body .card-text{
+  grid-column: 1;
+  grid-row: 1;
 }
