--- a/public/styles/theme.css
+++ b/public/styles/theme.css
@@ -5,6 +5,10 @@
   --green-accent-secondary: #2dab80;
   --green-accent-primary: #70be39;
   --green-accent-secondary-transparent: #2dab8149;
+  --green-primary-transparent: #1772454f;
+  --white-transparent: #f1fffa4d;
+  --black-transparent: #0d0a0b3b;
+  --green-accent-primary-transparent: #70be393b;
 }
 
 /* Element widths include padding */
