Settings update and log in fix

--- a/public/styles/settings.css
+++ b/public/styles/settings.css
@@ -41,7 +41,7 @@
     border-radius: 2px;
     font-size: .825rem;
     background-color: var(--white);
-    color: var(--white);
+    color: var(--black);
 }
 
 .form-control:focus {
