--- a/public/styles/profile.css
+++ b/public/styles/profile.css
@@ -1,7 +1,5 @@
 
 .account-settings .user-profile {
-    margin: 0 0 1rem 0;
-    padding-bottom: 1rem;
     text-align: center;
 }
 .account-settings .user-profile .user-avatar {
@@ -40,15 +38,19 @@
     -moz-border-radius: 2px;
     border-radius: 2px;
     font-size: .825rem;
-    background-color: var(--white);
     color: var(--black);
+    background-color: transparent;
+
 }
 
 .form-control:focus {
-    background-color: var(--white);
     border: 1px solid var(--green-primary);
     box-shadow: 0pt 0pt 0pt 2pt var(--green-accent-secondary-transparent); /* Optional glow effect */
     outline: none;
+}
+.form-control:disabled{
+    background-color: var(--white);
+
 }
 
 input:-webkit-autofill {
@@ -62,4 +64,13 @@ input:-webkit-autofill {
 
     height: 100pt;
     width: 100pt;
+}
+.center{
+    text-align: center;
+}
+.right{
+    text-align: right;
+}
+.left{
+    text-align: left;
 }
