--- a/public/styles/app_shell/app_shell.css
+++ b/public/styles/app_shell/app_shell.css
@@ -24,3 +24,28 @@ main {
   background-color: var(--green-accent-primary);
   border: 0pt;
 }
+
+.form-control {
+  border: 1px solid var(--green-primary);
+  -webkit-border-radius: 2px;
+  -moz-border-radius: 2px;
+  border-radius: 2px;
+  font-size: .825rem;
+  color: var(--black);
+  background-color: transparent;
+
+}
+
+.form-control:focus {
+  border: 1px solid var(--green-primary);
+  box-shadow: 0pt 0pt 0pt 2pt var(--green-accent-secondary-transparent); /* Optional glow effect */
+  outline: none;
+}
+.form-control:disabled{
+  background-color: var(--white);
+
+}
+
+input:-webkit-autofill {
+  transition: background-color 5000s ease-in-out 0s;
+}
