enhance daily challenges; adjust card expansion behavior on resize and update image styling

--- a/public/styles/dailyChallenges.css
+++ b/public/styles/dailyChallenges.css
@@ -36,15 +36,12 @@ h1 {
   text-align: center;
 }
 
-.card-body img {
-
-}
 
 .image-clip {
   overflow: hidden;
   border-radius: 8pt;
   height: auto;
-  margin-bottom: 20pt;
+  height: 200pt;
 }
 
 
