stats backend endpoint and footer updates

--- a/public/styles/theme.css
+++ b/public/styles/theme.css
@@ -4,6 +4,7 @@
   --black: #0d0a0b;
   --green-accent-secondary: #2dab80;
   --green-accent-primary: #70be39;
+  --green-accent-primary-transparent: #70be39a1;
   --green-accent-secondary-transparent: #2dab8149;
   --green-primary-transparent: #1772454f;
   --white-transparent: #f1fffa4d;
