--- a/public/styles/app_shell/footer_navbar.css
+++ b/public/styles/app_shell/footer_navbar.css
@@ -1,17 +1,29 @@
 /* Hide navbar unless on phone */
 .footer-navbar {
-    content-visibility: hidden;
+  content-visibility: hidden;
 }
 @media only screen and (max-width: 810px) {
-/* Navbar Bottom */ 
-.footer-navbar {
+  /* Navbar Bottom */
+  .footer-navbar {
     content-visibility: visible;
-    background-color: var(--green-primary);
+    /* background-color: rgba(168, 197, 156, 0.6); */
+    background-color: var(--green-accent-primary-transparent);
+    backdrop-filter: blur(10px);
+    padding-top: 10px;
+    height: 80px;
 
     a {
-        font-size: 200%;
-        margin-left: 5%;
-        margin-right: 5%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 2rem;
+      background-color: transparent;
+      border: none;
+
+      .material-symbols-outlined {
+        font-variation-settings: "FILL" 0, "wght" 200, "GRAD" 0, "opsz" 24;
+        font-size: 2.6rem;
+      }
     }
-}
+  }
 }
