--- a/public/styles/profile.css
+++ b/public/styles/profile.css
@@ -1,56 +1,58 @@
-
 .account-settings .user-profile {
-    text-align: center;
+  text-align: center;
 }
 .account-settings .user-profile .user-avatar {
-    margin: 0 0 1rem 0;
+  margin: 0 0 1rem 0;
 }
 .account-settings .user-profile .user-avatar img {
-    width: 90px;
-    height: 90px;
-    -webkit-border-radius: 100px;
-    -moz-border-radius: 100px;
-    border-radius: 100px;
+  width: 90px;
+  height: 90px;
+  -webkit-border-radius: 100px;
+  -moz-border-radius: 100px;
+  border-radius: 100px;
 }
 .account-settings .user-profile h5.user-name {
-    margin: 0 0 0.5rem 0;
+  margin: 0 0 0.5rem 0;
 }
 .account-settings .user-profile h6.user-email {
-    margin: 0;
-    font-size: 0.8rem;
-    font-weight: 400;
+  margin: 0;
+  font-size: 0.8rem;
+  font-weight: 400;
 }
 .account-settings .about {
-    margin: 1rem 0 0 0;
-    font-size: 0.8rem;
-    text-align: center;
+  margin: 1rem 0 0 0;
+  font-size: 0.8rem;
+  text-align: center;
 }
 .card {
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    border-radius: 5px;
-    border: 0;
-    margin-bottom: 1rem;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  border: 0;
+  margin-bottom: 1rem;
 }
-.bottom-menu{
-    text-align: right;
+.bottom-menu {
+  text-align: right;
 }
-#about{
+#about {
+  height: 100pt;
+  width: 100pt;
+}
+.center {
+  text-align: center;
+}
+.right {
+  text-align: right;
+}
+.left {
+  text-align: left;
+}
 
-    height: 100pt;
-    width: 100pt;
-}
-.center{
-    text-align: center;
-}
-.right{
-    text-align: right;
-}
-.left{
-    text-align: left;
+#imageUploadButton {
+  display: none;
+  width: 100pt;
 }
 
-#imageUploadButton{
-    display: none; 
-    width: 100pt;
+#profileImage {
+  max-width: 50px;
 }
