--- a/public/styles/login.css
+++ b/public/styles/login.css
@@ -16,7 +16,6 @@ body {
   align-items: center;
   height: 100vh;
   width: 100%;
-  /* overflow: hidden; */
 
   #logo-wrapper {
     display: flex;
@@ -154,9 +153,6 @@ body {
         }
         .firebaseui-link {
           color: var(--green-secondary);
-        }
-        .firebaseui-card-actions {
-          /* display: block; */
         }
         .mdl-textfield--floating-label.is-focused .mdl-textfield__label,
         .mdl-textfield--floating-label.is-dirty .mdl-textfield__label,
@@ -372,7 +368,17 @@ body {
   }
 }
 
-
 .firebaseui-input {
   color: var(--white) !important; /* Change to your desired color */
+}
+
+@media (max-width: 1000px) {
+  #container #form-container {
+    width: 70%;
+  }
+}
+@media (max-width: 600px) {
+  #container #form-container {
+    width: 90%;
+  }
 }
