--- a/public/styles/ecoactions.css
+++ b/public/styles/ecoactions.css
@@ -49,3 +49,7 @@ h1 {
   height: 200pt;
   width: 100%; /* Optional: Ensures the clip container spans the full width */
 }
+
+.coin{
+width: 10pt;
+}
