--- a/public/styles/ecoactions.css
+++ b/public/styles/ecoactions.css
@@ -32,8 +32,22 @@
 }
 
 h1 {
-  margin: 10pt 10pt 15pt 10pt;
-  text-align: center;
+  font-family: "Poppins", sans-serif;
+  font-weight: 600;
+  font-size: 3rem;
+  padding: 0 0 50px 0;
+}
+
+main {
+  padding: 75px 0 75px 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  .container {
+    padding: 0;
+    margin: 0;
+  }
 }
 
 .card-body img {
