--- a/public/styles/stats.css
+++ b/public/styles/stats.css
@@ -2,13 +2,33 @@ body {
   background: white;
 }
 
-h1 {
-  font-family: "Poppins", sans-serif;
-  font-weight: 600;
-  font-size: 3rem;
+main {
+  width: 100%;
+  padding: 75px 0 75px 0;
+
+  h1 {
+    font-family: "Poppins", sans-serif;
+    font-weight: 600;
+    font-size: 3rem;
+    padding: 0 0 50px 8%;
+  }
+
+  #stats-container {
+    display: flex;
+    justify-content: center;
+    /* align-items: center; */
+
+    #completed-ecoaction-count-wrapper {
+    }
+  }
 }
 
-#container {
-  width: 100%;
-  height: 100vh;
+@media (max-width: 770px) {
+  main {
+    padding-left: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 }
