--- a/public/styles/finishEcoaction.css
+++ b/public/styles/finishEcoaction.css
@@ -14,9 +14,10 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(255, 255, 255, 0.308); /* White overlay with transparency */
-    border-radius: 8pt; /* Ensures overlay follows the rounded corners */
-    z-index: 1; /* Places the overlay above other elements */
+    backdrop-filter: blur(0px); /* Distorts the background */
+    background-color: var(--custom-color);
+    border-radius: 8pt; 
+    z-index: 1; 
 }
 
 /* Ensure child elements are under the overlay */
