--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -1,20 +1,36 @@
-#nav{
-    margin-bottom: 20pt;
+#nav {
+  margin-bottom: 20pt;
 }
 .card-img-top {
-    width: 100%;
-    height: 100pt;
-    object-fit: contain;    
-    object-fit: cover;
+  width: 100%;
+  height: 100pt;
+  object-fit: contain;
+  object-fit: cover;
 }
-.container{
-    margin-bottom: 20pt;
+.container {
+  padding-bottom: 100px;
 }
-#nav img{
-    margin-right: 10pt;
-}
-
-footer{
-background-color: #d2d2d2;
+#nav img {
+  margin-right: 10pt;
 }
 
+footer {
+  background-color: #d2d2d2;
+}
+
+#login {
+  padding: 20px;
+  background-color: transparent;
+  border-radius: 5px;
+  border: 3px solid var(--green-primary);
+  color: var(--green-primary);
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 1.2rem;
+  margin-top: 20px;
+  transition: all 0.3s ease-in-out;
+}
+#login:hover {
+  background-color: var(--green-primary);
+  color: var(--white);
+}
