--- a/public/styles/theme.css
+++ b/public/styles/theme.css
@@ -21,3 +21,20 @@
 /* Poppins for headings */
 /* Open sans for body */
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
+/* Standard green button*/
+.green-button {
+  padding: 20px;
+  background-color: transparent;
+  border-radius: 5px;
+  border: 3px solid var(--green-primary);
+  color: var(--green-primary);
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 1.2rem;
+  transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
+}
+.green-button:hover {
+  background-color: var(--green-primary);
+  color: var(--white);
+}
