--- a/public/styles/app_shell/footer_navbar.css
+++ b/public/styles/app_shell/footer_navbar.css
@@ -1,29 +1,46 @@
 /* Hide navbar unless on phone */
-.footer-navbar {
-  content-visibility: hidden;
-}
-@media only screen and (max-width: 810px) {
-  /* Navbar Bottom */
-  .footer-navbar {
-    content-visibility: visible;
-    /* background-color: rgba(168, 197, 156, 0.6); */
+#footer-nav {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  z-index: 9999;
+
+  #footer-nav-list {
+    content-visibility: hidden;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: min(10%, 50px);
+    list-style: none;
+    margin: 0;
+    padding: 15px 0 25px 0;
     background-color: var(--green-accent-primary-transparent);
     backdrop-filter: blur(10px);
-    padding-top: 10px;
-    height: 80px;
 
-    a {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-size: 2rem;
-      background-color: transparent;
-      border: none;
+    li {
+      margin: 0;
+      padding: 0;
 
-      .material-symbols-outlined {
-        font-variation-settings: "FILL" 0, "wght" 200, "GRAD" 0, "opsz" 24;
-        font-size: 2.6rem;
+      a {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: transparent;
+        border: none;
+        color: white;
+
+        .lucide {
+          width: 35px;
+          height: 35px;
+          stroke-width: 2px;
+        }
       }
     }
+  }
+}
+@media (max-width: 810px) {
+  #footer-nav #footer-nav-list {
+    content-visibility: visible;
   }
 }
