--- a/public/styles/ecoactions.css
+++ b/public/styles/ecoactions.css
@@ -1,6 +1,5 @@
 .card {
   margin: 0pt 20pt 20pt 20pt;
-  margin-bottom: 20pt;
 }
 
 .card-body {
@@ -31,13 +30,6 @@
   grid-row: 2;
 }
 
-h1 {
-  font-family: "Poppins", sans-serif;
-  font-weight: 600;
-  font-size: 3rem;
-  padding: 0 0 50px 0;
-}
-
 main {
   padding: 75px 0 75px 0;
   display: flex;
@@ -47,6 +39,17 @@ main {
   .container {
     padding: 0;
     margin: 0;
+
+    #h1-container {
+      padding-left: 8%;
+
+      h1 {
+        font-family: "Poppins", sans-serif;
+        font-weight: 600;
+        font-size: 3rem;
+        padding: 0 0 50px 0;
+      }
+    }
   }
 }
 
@@ -68,8 +71,8 @@ main {
   width: 10pt;
 }
 
-@media (max-width: 770px) {
-  #h1-container {
-    text-align: center;
+@media (max-width: 810px) {
+  main .container #h1-container h1 {
+    font-size: 2.8rem;
   }
 }
