--- a/public/styles/groups.css
+++ b/public/styles/groups.css
@@ -26,9 +26,8 @@ main {
   justify-content: flex-start;
 }
 
-@media (max-width: 770px) {
-  #h1-container {
-    padding-left: 0;
-    align-items: center;
+@media (max-width: 810px) {
+  #h1-container h1 {
+    font-size: 2.8rem;
   }
 }
