feat(nav-bar): add Eco Points display and update styling

--- a/public/styles/app_shell/app_shell.css
+++ b/public/styles/app_shell/app_shell.css
@@ -47,3 +47,11 @@ main {
 input:-webkit-autofill {
   transition: background-color 5000s ease-in-out 0s;
 }
+
+#ecoPointsImage{
+  height: 20pt;
+}
+
+.navBarEcoPoints{
+  color: white;
+}
