--- a/public/styles/app_shell/navbar.css
+++ b/public/styles/app_shell/navbar.css
@@ -42,7 +42,7 @@
 }
 
 #profileDropdown img {
-  transition: transform 0.2s ease-in-out;
+  transition: transform 0.3s ease-in-out;
 }
 #profileDropdown img:hover {
   transform: scale(1.1); /* Increase size */
@@ -89,4 +89,14 @@
   background-color: var(--white) !important;
   border-radius: 5pt;
   color: black !important;
+}
+
+.lucide {
+  width: 40px;
+  height: 40px;
+  stroke-width: 1.5px;
+}
+
+.profile-image {
+  display: none;
 }
