feat(finishEcoaction): enable button based on input validation and adjust styles

--- a/public/styles/ecoactions.css
+++ b/public/styles/ecoactions.css
@@ -41,7 +41,7 @@ main {
     margin: 0;
 
     #h1-container {
-      padding-left: 8%;
+      padding-left: 20pt;
 
       h1 {
         font-family: "Poppins", sans-serif;
