--- a/public/styles/groups.css
+++ b/public/styles/groups.css
@@ -11,11 +11,12 @@
     font-size: 3rem;
     padding: 0 0 10px 0;
   }
-  #create-new {
-    text-decoration: none;
-    font-size: 1rem;
-    padding: 10px;
-  }
+  
+}
+#create-new, #join-group{
+  text-decoration: none;
+  font-size: 1rem;
+  padding: 10px;
 }
 
 main {
