--- a/public/styles/stats.css
+++ b/public/styles/stats.css
@@ -15,7 +15,34 @@ main {
 
   #stats-container {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    gap: 20px;
+
+    #doughnuts-container {
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      width: 100%;
+      height: 250px;
+
+      #missed-completed-ecoaction-count-wrapper {
+        height: 100%;
+        border-radius: 15px;
+        padding: 25px;
+        box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+      }
+    }
+    #weekly-ecopoints-over-time-wrapper {
+      padding: 25px;
+      width: 50%;
+      border-radius: 15px;
+      /* box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px; */
+      box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+      /* box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px; */
+      /* box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; */
+    }
   }
 }
 
