stats page p2, added KPIs, weekly ecopoints, widgets, collapsible containers, this week vs lifetime

--- a/public/styles/app_shell/navbar.css
+++ b/public/styles/app_shell/navbar.css
@@ -1,5 +1,5 @@
 #nav {
-  background-image: linear-gradient(to right, var(--green-accent-primary), var(--green-primary));
+  background-image: linear-gradient(to left, var(--green-accent-primary), var(--green-secondary));
 }
 
 .navbar-brand,
