--- a/public/styles/theme.css
+++ b/public/styles/theme.css
@@ -1,10 +1,16 @@
+/* Poppins for headings */
+/* Open sans for body */
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
+
 :root {
   --green-primary: #177245;
+  --green-secondary: #1a4d2e;
   --white: #f1fffa;
   --black: #0d0a0b;
   --green-accent-secondary: #2dab80;
   --green-accent-primary: #70be39;
-  --green-accent-primary-transparent: #70be3987;
+  --green-accent-primary-transparent: #1e5721de;
   --green-accent-secondary-transparent: #2dab8149;
   --green-primary-transparent: #1772454f;
   --white-transparent: #f1fffa4d;
@@ -17,10 +23,6 @@
 *::after {
   box-sizing: border-box;
 }
-
-/* Poppins for headings */
-/* Open sans for body */
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 /* Standard green button*/
 .green-button {
