--- a/public/styles/app_shell/navbar.css
+++ b/public/styles/app_shell/navbar.css
@@ -1,3 +1,9 @@
+#nav_bar {
+  position: sticky;
+  top: 0;
+  width: 100%;
+}
+
 #nav {
   background-image: linear-gradient(to left, var(--green-accent-primary), var(--green-secondary));
 }
