--- a/public/styles/stats.css
+++ b/public/styles/stats.css
@@ -18,7 +18,7 @@ main {
   padding: 75px 0 75px 0;
 
   h1 {
-    font-family: "Arial", sans-serif;
+    font-family: "Poppins", sans-serif;
     font-weight: 600;
     font-size: 3rem;
     padding: 0 0 0 8%;
@@ -26,7 +26,7 @@ main {
     color: black;
   }
   h2 {
-    font-family: "Arial", sans-serif;
+    font-family: "Poppins", sans-serif;
     font-weight: 500;
     font-size: 2rem;
     padding: 50px 0 30px 8%;
@@ -133,6 +133,9 @@ main {
       width: 500px;
     }
   }
+}
+main.hidden {
+  display: none;
 }
 
 @media (max-width: 900px) {
