--- a/public/styles/loader.css
+++ b/public/styles/loader.css
@@ -1,6 +1,5 @@
 #loader {
   min-height: calc(100vh - 86px);
-  padding-bottom: 86px;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -8,10 +7,10 @@
   align-items: center;
 
   h1 {
-    padding: 100px;
+    padding-top: 60px;
     font-family: "Poppins", sans-serif;
-    font-weight: 600;
-    font-size: 3.5rem;
+    font-weight: 500;
+    font-size: 1.5rem;
     color: var(--green-secondary);
   }
 }
