--- a/public/styles/stats.css
+++ b/public/styles/stats.css
@@ -149,10 +149,10 @@ main.hidden {
     }
 
     .kpis .widget {
-      width: max(25vw, 100px);
+      width: max(18vw, 140px);
     }
     .kpis {
-      height: 27vw;
+      height: max(18vw, 140px);
     }
     .kpi-value {
       font-size: 4.5rem;
@@ -172,7 +172,14 @@ main.hidden {
 
   main {
     .kpis {
-      gap: 15px;
+      gap: 10px;
+      height: max(22vw, 110px);
+    }
+    .stats-container {
+      gap: 10px;
+    }
+    .kpis .widget {
+      width: max(22vw, 110px);
     }
 
     .kpi-value {
