--- a/public/styles/stats.css
+++ b/public/styles/stats.css
@@ -120,21 +120,22 @@ main {
   }
 
   #lifetime-container {
-    #doughnuts-container {
+    #container {
       display: flex;
       flex-direction: row;
       justify-content: center;
       width: 100%;
-      height: 250px;
+      gap: var(--gap-primary);
 
       #ecoactions-breakdown-wrapper {
         height: 100%;
         width: 375px;
       }
-    }
-    #weekly-ecopoints-over-time-wrapper {
-      height: 350px;
-      width: 500px;
+
+      #weekly-ecopoints-over-time-wrapper {
+        height: 350px;
+        width: 500px;
+      }
     }
   }
 }
